# hot-loop

./: Cargo.toml  LICENSE-MIT  README.md
src/: core.rs  lib.rs  models.rs  token_output_stream.rs  utils.rs
src/core/: error.rs  generation.rs  model_weights.rs  session.rs  settings.rs
src/core/session/: generation.rs  session.rs
src/models/: gemma.rs  qwen3.rs
src/models/gemma/: chat_template.rs  gemma.rs  transformers.rs
src/models/qwen3/: chat_template.rs  qwen3.rs  qwen3_weights.rs  transformers.rs
src/utils/: kv_cache.rs  token_output_stream.rs
