[package]
name = "hot-loop"
version = "0.1.2"
edition = "2024"

license = "MIT"
description = "Running Gguf Chat-Models on Pure-Rust, Uses the Candle Backend"
repository = "https://github.com/Qu1ntev/hot-loop"

[dependencies]
candle-core = "0.9.2"
candle-transformers = "0.9.2"
candle-nn = "0.9.2"

tokenizers = "0.22.2"

thiserror = "2.0.18"