[package]
name = "hot-loop"
version = "0.1.4"
edition = "2024"

license = "MIT"
description = "Running Gguf Chat-Models on Pure-Rust, Uses the Candle Backend"
repository = "https://github.com/Qu1ntev/hot-loop"

keywords = ["llm", "gguf", "candle", "inference", "model"]

[dependencies]
candle-core = "0.9.2"
candle-transformers = "0.9.2"
candle-nn = "0.9.2"

intel-mkl-src = { version = "0.8.1", optional = true }
accelerate-src = { version = "0.3.2", optional = true }

tokenizers = "0.22.2"

thiserror = "2.0.18"

[features]
default = []

cuda = ["candle-core/cuda", "candle-transformers/cuda", "candle-nn/cuda"]
# metal = ["candle-core/metal", "candle-transformers/metal", "candle-nn/metal"]

mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-transformers/mkl", "candle-nn/mkl"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-transformers/accelerate", "candle-nn/accelerate"]